# TaskHive-AI

./: Dockerfile  README.md  docker-compose.yml  main.py  multi_agent.db  pyproject.toml  render.yaml  requirements.txt
agents/: __init__.py  critic.py  formatter.py  llm_factory.py  researcher.py  writer.py
api/: main.py  routes.py  schemas.py
config/: settings.py
crew/: __init__.py  research_crew.py  tasks.py
dashboard/: app.py
db/: __init__.py  crud.py  database.py  models.py
outputs/: ai-trends-in-2025_report.md  ai_in_defence_report.md  ai_trends_in_2025_report.md  machine_learning_in_education_report.md  machine_learning_in_healthcare_report.md
scripts/: check_ollama_api.py
tools/: file_tool.py  search_tool.py
