[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[litellm,tools]>=1.6.1",
    "fastapi>=0.134.0",
    "langchain-groq>=1.1.2",
    "litellm>=1.81.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
]
